--- a/VSExam/src/main/res/values/color.xml
+++ b/VSExam/src/main/res/values/color.xml
@@ -3,9 +3,9 @@
     <color name="dark">#333333</color>
     <color name="dark_lighter">#646464</color>
     <color name="almost_white">#f2f2f2</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
     <color name="standard_grey">#ededed</color>
     <color name="dark_text">#585858</color>
     <color name="divider_light">#cccccc</color>
 </resources>
-
-
