Properlly implement detail fragment of the exam
Signed-off-by: Frca <killerfrca@gmail.com>

--- a/VSExam/src/main/res/layout/activity_main.xml
+++ b/VSExam/src/main/res/layout/activity_main.xml
@@ -1,13 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container_base"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
-
-    <fragment android:id="@+id/view"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:name="com.frca.vsexam.fragments.MainActivityFragment"
-              tools:layout="@layout/fragment_main"/>
 
 </LinearLayout>
