--- a/VSExam/src/main/res/layout/fragment_main.xml
+++ b/VSExam/src/main/res/layout/fragment_main.xml
@@ -8,23 +8,20 @@
               android:layout_height="match_parent">
 
     <ListView android:id="@+id/left_pane"
-              android:layout_width="280dp"
+              android:layout_width="@dimen/sliding_pane_width"
               android:layout_height="match_parent"
               android:divider="@color/divider_light"
               android:dividerHeight="1dp"
               android:layout_gravity="start" />
 
 
-    <ScrollView
-        android:layout_width="600dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:paddingLeft="13dp"
-        android:paddingRight="10dp"
-        android:scrollbarStyle="outsideOverlay"
-        >
-
-        <include layout="@layout/exam_list_details" />
+    <ScrollView android:id="@+id/container"
+                android:layout_width="400dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:paddingLeft="13dp"
+                android:paddingRight="10dp"
+                android:scrollbarStyle="outsideOverlay" >
 
     </ScrollView>
 
