--- a/VSExam/src/main/res/values-w600dp/styles.xml
+++ b/VSExam/src/main/res/values-w600dp/styles.xml
@@ -11,5 +11,12 @@
         <item name="android:orientation">vertical</item>
     </style>
 
+    <style name="ResponsiveLayoutItem.Details" parent="ResponsiveLayoutItem">
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:layout_margin">7dp</item>
+        <item name="android:layout_marginTop">15dp</item>
+        <item name="android:padding">@dimen/details_inner_padding</item>
+    </style>
 
 </resources>
