--- a/VSExam/src/main/res/values/dimens.xml
+++ b/VSExam/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="exam_list_item_height">50dp</dimen>
     <!--<dimen name="exam_list_item_date_width">85dp</dimen>-->
     <dimen name="sliding_pane_width">280dp</dimen>
+    <dimen name="details_inner_padding">3dp</dimen>
+    <dimen name="details_side_margin">7dp</dimen>
 </resources>
