--- a/VSExam/src/main/res/layout/fragment_main.xml
+++ b/VSExam/src/main/res/layout/fragment_main.xml
@@ -14,15 +14,9 @@
               android:dividerHeight="1dp"
               android:layout_gravity="start" />
 
-
-    <ScrollView android:id="@+id/container"
+    <FrameLayout android:id="@+id/container"
                 android:layout_width="400dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:paddingLeft="13dp"
-                android:paddingRight="10dp"
-                android:scrollbarStyle="outsideOverlay" >
-
-    </ScrollView>
+                android:layout_weight="1" />
 
 </android.support.v4.widget.SlidingPaneLayout>
