--- a/VSExam/src/main/res/values/styles.xml
+++ b/VSExam/src/main/res/values/styles.xml
@@ -35,12 +35,25 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="DataHeader.Classmate" parent="@style/DataHeader">
+        <item name="android:layout_width">90dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">0dp</item>
+        <item name="android:paddingTop">0dp</item>
+        <item name="android:paddingBottom">0dp</item>
+    </style>
+
     <style name="DataContent">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginLeft">5dp</item>
         <item name="android:textSize">12sp</item>
         <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="DataContent.Classmate" parent="DataContent">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
 
     <style name="LogoView">
@@ -55,6 +68,10 @@
         <item name="android:layout_margin">5dp</item>
     </style>
 
+    <style name="LogoView.VeryLarge" parent="LogoView">
+        <item name="android:layout_width">80dp</item>
+        <item name="android:layout_height">96dp</item>
+        <item name="android:layout_margin">10dp</item>
     </style>
 
 </resources>
